[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wampproto"
version = "0.1.0"
authors = [
  {name="Omer Akram", email="omer@thing.com"},
  {name="Mahad Munir", email="mahad@xconn.io"},
]
description = "https://github.com/xconnio/wampproto.py"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "cbor2",
  "msgpack",
  "pynacl",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = ["coverage", "pytest", "ruff"]

[project.urls]
"Homepage" = "https://github.com/xconnio/wampproto.py"
"Bug Tracker" = "https://github.com/xconnio/wampproto.py/issues"
